<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".ui.view.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="150dp"
        android:src="@drawable/homescreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/username"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="32dp"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/email"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/password"
        android:layout_marginTop="27dp"
        android:paddingLeft="16dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/confirm_password"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/togetherGive"
        android:text="@string/register" />


</RelativeLayout>
